--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
-
 <html>
 <head>
     <title>DOM</title>
+    
 </head>
 <body>
-    <h1>DOM</hjson>
-    <p id="demo">Hello World!</p>
-    <h1>Rajnish kumar</h1>
-
-    <button id="dark">dark</button>
-    <button id="light">light</button>
+    <h1>DOM manipulation</h1>
+    <script src="index.js"></script>
 
 
-    
-    <script>
-       src  = "index.js";
-    </script>
-
-
+    <!-- <button onclick="changebackground('black')" ondblclick="changebackground('white')"> single click dark and double click  white</button> -->
+    <!-- <button id="themebtn" onclick="changebackground('white')" > light</button> -->
+    <button id="theme_btn" onclick="changebackground('black')" > dark mode</button>
 
 </body>
-
-
-
-
-
-
 
 </html>
